Update title and form fields for digital invoicing

--- a/abocados/index.html
+++ b/abocados/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>A Bocados - Pedidos Online</title>
+    <title>A Bocados - Facturación Digital</title>
     <style>
         :root { --fucsia: #d81b60; --oscuro: #1a1a1a; --gris: #2d2d2d; --blanco: #ffffff; --verde: #25d366; }
         body { font-family: 'Segoe UI', sans-serif; margin: 0; background: var(--oscuro); color: var(--blanco); }
@@ -12,28 +12,26 @@
         .container { padding: 10px; max-width: 600px; margin: auto; }
         .card { background: var(--gris); border-radius: 20px; padding: 15px; margin-bottom: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.5); }
         h3 { margin-top: 0; font-size: 18px; color: var(--fucsia); border-bottom: 1px solid #444; padding-bottom: 8px; text-transform: uppercase; }
-        .form-input { width: 100%; padding: 12px; margin: 5px 0 10px; border-radius: 10px; border: 1px solid #444; background: #111; color: white; box-sizing: border-box; }
+        .form-input { width: 100%; padding: 12px; margin: 5px 0 10px; border-radius: 10px; border: 1px solid #444; background: #111; color: white; box-sizing: border-box; font-size: 15px; }
         .seccion-titulo { background: var(--fucsia); color: white; padding: 8px 15px; border-radius: 10px; font-size: 13px; text-transform: uppercase; margin: 20px 0 10px; font-weight: bold; text-align: center; }
         
-        /* Grilla de Productos */
         .item { display: flex; gap: 10px; padding: 12px 0; border-bottom: 1px solid #333; align-items: center; }
-        .item-img { width: 70px; height: 70px; border-radius: 10px; object-fit: cover; border: 1px solid var(--fucsia); }
         .item-info { flex: 1; }
         .item-nombre { font-weight: bold; font-size: 14px; color: var(--blanco); }
         .item-desc { font-size: 11px; color: #aaa; margin-top: 2px; line-height: 1.2; }
         .item-precio { font-size: 13px; color: var(--fucsia); font-weight: bold; margin-top: 4px; }
-        .input-cant { width: 50px; padding: 8px; border: 1px solid var(--fucsia); border-radius: 8px; text-align: center; font-weight: bold; background: #000; color: white; }
+        .input-cant { width: 55px; padding: 10px 5px; border: 2px solid var(--fucsia); border-radius: 10px; text-align: center; font-weight: bold; background: #000; color: white; flex-shrink: 0; }
 
-        .total-sticky { position: fixed; bottom: 85px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 480px; background: var(--fucsia); color: white; padding: 12px; border-radius: 15px; text-align: center; box-shadow: 0 4px 15px rgba(0,0,0,0.6); z-index: 100; font-weight: bold; }
+        .total-sticky { position: fixed; bottom: 85px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 480px; background: var(--fucsia); color: white; padding: 15px; border-radius: 20px; text-align: center; box-shadow: 0 4px 20px rgba(0,0,0,0.7); z-index: 100; }
         .btn-enviar { background: var(--verde); color: white; border: none; padding: 20px; border-radius: 15px; width: 100%; font-size: 18px; font-weight: bold; cursor: pointer; margin-top: 10px; box-shadow: 0 4px 0 #128c7e; }
-        footer { text-align: center; padding: 30px 10px 140px; font-size: 10px; color: #666; }
+        footer { text-align: center; padding: 30px 10px 150px; font-size: 11px; color: #666; }
     </style>
 </head>
 <body>
 
 <header>
     <img src="aboados.PNG" class="logo-img">
-    <div style="font-size: 11px; color: #aaa; margin-top: 5px;">Cra. 20 & Cl. 22, Caucasia</div>
+    <div style="font-size: 11px; color: #aaa; margin-top: 5px;">Innovación Gastronómica en Caucasia</div>
 </header>
 
 <div class="container">
@@ -43,11 +41,11 @@
         <input type="tel" id="celular" class="form-input" placeholder="Celular">
         <input type="text" id="direccion" class="form-input" placeholder="Dirección en Caucasia">
         <select id="pago" class="form-input">
-            <option value="Contado / Efectivo">Efectivo</option>
+            <option value="Efectivo">Efectivo</option>
             <option value="Nequi">Nequi</option>
             <option value="Ahorro a la mano">Ahorro a la mano</option>
         </select>
-        <textarea id="obs" class="form-input" style="height: 50px;" placeholder="Notas: Ej. Sin cebolla, portería..."></textarea>
+        <textarea id="obs" class="form-input" style="height: 50px;" placeholder="Notas adicionales..."></textarea>
     </div>
 
     <div class="card">
@@ -56,14 +54,15 @@
     </div>
 
     <div class="total-sticky">
-        <span style="font-size: 11px; opacity: 0.9;">VALOR DEL PEDIDO</span><br>
-        <span style="font-size: 24px;">$</span><span id="cuenta-total" style="font-size: 24px;">0</span>
+        <span style="font-size: 12px; opacity: 0.9;">VALOR TOTAL DEL PEDIDO</span><br>
+        <span style="font-size: 26px; font-weight: bold;">$</span><span id="cuenta-total" style="font-size: 26px; font-weight: bold;">0</span>
     </div>
 
-    <button class="btn-enviar" onclick="enviarPedido()">🚀 ENVIAR PEDIDO + GPS</button>
+    <button class="btn-enviar" onclick="enviarPedido()">🚀 ENVIAR PEDIDO + FACTURA</button>
 
     <footer>
-        APP HECHA POR <strong style="color:var(--fucsia)">VIBRAS POSITIVAS</strong><br>
+        APP DESARROLLADA POR <br>
+        <strong style="color:var(--fucsia)">VIBRAS POSITIVAS</strong><br>
         © 2026 - TODOS LOS DERECHOS RESERVADOS
     </footer>
 </div>
@@ -71,41 +70,26 @@
 <script>
     const menu = {
         "Hamburguesas": [
-            {n: "Sweet Bacon", p: 32000, d: "Carne res 146g al carbón, queso cheddar"},
-            {n: "Doble Americana", p: 26000, d: "Pan artesanal, doble carne 100g"},
-            {n: "Orgasmics", p: 29000, d: "Toque dulce y cremoso del chef"},
-            {n: "Doble Crispy", p: 29000, d: "Dos piezas de pollo crispy"},
-            {n: "Pulled Pork", p: 28000, d: "Costilla de cerdo desmechada"},
-            {n: "Ambrosia", p: 32000, d: "Nuestra última creación premium"},
-            {n: "Pollo Crispy", p: 29000, d: "Pechuga apanada y carne res"},
-            {n: "Street Burger", p: 16000, d: "Carne 100g, queso mozzarella"},
-            {n: "Triple M", p: 32000, d: "Carne 146g, pan de la casa"},
-            {n: "Super Bacon", p: 29000, d: "Mozzarella y 4 lonjas tocineta"},
-            {n: "Pinchada", p: 31000, d: "Con chicharrones crocantes"},
-            {n: "Mexicana", p: 27500, d: "Carne 140g, guacamole, cheddar"},
-            {n: "Mixta", p: 28000, d: "Res 140g y pollo al carbón"},
-            {n: "De la Casa", p: 23500, d: "Res 140g sellada en mantequilla"},
-            {n: "Original", p: 12000, d: "Carne 90g, mozzarella, vegetales"},
-            {n: "Americana", p: 25500, d: "Res 140g, pan sellado casa"},
-            {n: "Doble Carne", p: 33500, d: "Doble res 140g, mozzarella, tocineta"}
+            {n: "Sweet Bacon", p: 32000, d: "Carne res 146g al carbón, cheddar"},
+            {n: "Doble Americana", p: 26000, d: "Doble carne 100g artesanal"},
+            {n: "Orgasmics", p: 29000, d: "Combinación cremosa del chef"},
+            {n: "Doble Crispy", p: 29000, d: "Doble pollo crispy premium"},
+            {n: "Ambrosia", p: 32000, d: "Creación premium especial"},
+            {n: "Street Burger", p: 16000, d: "Carne 100g y mozzarella"},
+            {n: "Mexicana", p: 27500, d: "Guacamole, cheddar y jalapeños"},
+            {n: "Original", p: 12000, d: "Carne 90g y vegetales frescos"},
+            {n: "Americana", p: 25500, d: "Res 140g sellada mantequilla"}
         ],
-        "Perros Calientes": [
-            {n: "Sweet Dog", p: 27000, d: "Pan brioche, salchicha americana, cheddar"},
-            {n: "Americano", p: 22000, d: "Pan brioche, salchicha americana premium"},
-            {n: "Chicken Dog", p: 24000, d: "Pan brioche, salchicha y pollo"}
-        ],
-        "Parrilla": [
-            {n: "Costichi", p: 43000, d: "400g costilla-chicharrón al carbón"},
-            {n: "Costillas BBQ", p: 43000, d: "500g horneadas y finalizadas parrilla"}
+        "Perros y Parrilla": [
+            {n: "Sweet Dog", p: 27000, d: "Salchicha americana y cheddar"},
+            {n: "Americano", p: 22000, d: "Salchicha premium en pan brioche"},
+            {n: "Costichi", p: 43000, d: "400g costilla-chicharrón carbón"},
+            {n: "Costillas BBQ", p: 43000, d: "500g horneadas salsa secreta"}
         ],
         "Bebidas": [
-            {n: "Limonada Cerezada", p: 8000}, {n: "Limonada Coco", p: 13000}, {n: "Limonada Sencilla", p: 5000},
-            {n: "Jugo Natural Leche", p: 9000}, {n: "Jugo Natural Agua", p: 7000}, {n: "Milo Frio", p: 9000},
-            {n: "Coca Cola 1.5L", p: 11000}, {n: "Postobón 1.5L", p: 8000}, {n: "Agua Brisa 600ml", p: 3000}
-        ],
-        "Cervezas": [
-            {n: "Costeñita", p: 4500}, {n: "Stella Artois", p: 8000}, {n: "Aguila Light Lata", p: 6500},
-            {n: "Corona", p: 8000}, {n: "Corona Coronita", p: 6000}, {n: "Club Colombia", p: 6000}
+            {n: "Limonada Cerezada", p: 8000}, {n: "Limonada Coco", p: 13000},
+            {n: "Coca Cola 1.5L", p: 11000}, {n: "Aguila Light Lata", p: 6500},
+            {n: "Corona", p: 8000}, {n: "Stella Artois", p: 8000}
         ]
     };
 
@@ -150,6 +134,8 @@
         const cel = document.getElementById('celular').value.trim();
         const dir = document.getElementById('direccion').value.trim();
         const total = document.getElementById('cuenta-total').innerText;
+        const pago = document.getElementById('pago').value;
+        const obs = document.getElementById('obs').value.trim();
 
         if(!nom || !cel || !dir || total === "0") return alert("Socio, llena tus datos y elige tu pedido.");
 
@@ -157,30 +143,36 @@
 
         navigator.geolocation.getCurrentPosition((pos) => {
             const gps = `https://www.google.com/maps?q=${pos.coords.latitude},${pos.coords.longitude}`;
-            const numP = Math.floor(Math.random() * 90000) + 10000;
+            const numP = Math.floor(Math.random() * 9000) + 1000;
 
-            let msg = `*🍔 A BOCADOS - NUEVO PEDIDO #${numP}*\n`;
+            let msg = `*🍔 A BOCADOS - PEDIDO #${numP}*\n`;
             msg += `--------------------------------\n`;
             msg += `👤 *CLIENTE:* ${nom}\n`;
             msg += `📞 *CEL:* ${cel}\n`;
             msg += `📍 *DIR:* ${dir}\n`;
             msg += `--------------------------------\n`;
-            msg += `*MERCANCÍA (Lista):*\n`;
+            msg += `*DETALLE DE FACTURA:*\n`;
             
             document.querySelectorAll('.input-cant').forEach(i => {
                 const cant = parseInt(i.value);
-                if(cant > 0) msg += ` • ${i.dataset.n} : *${cant}*\n`;
+                if(cant > 0) {
+                    const precio = parseInt(i.dataset.p);
+                    const subtotal = cant * precio;
+                    msg += `🔹 ${i.dataset.n}\n`;
+                    msg += `   ${cant} x $${precio.toLocaleString()} = *$${subtotal.toLocaleString()}*\n`;
+                }
             });
 
             msg += `--------------------------------\n`;
-            msg += `💰 *TOTAL A PAGAR: $${total}*\n`;
-            msg += `💳 *PAGO:* ${document.getElementById('pago').value}\n`;
-            msg += `📍 *UBICACIÓN:* ${gps}\n`;
+            msg += `💰 *TOTAL A COBRAR: $${total}*\n`;
+            msg += `💳 *PAGO:* ${pago}\n`;
+            if(obs) msg += `📝 *OBS:* ${obs}\n`;
+            msg += `📍 *MAPA:* ${gps}\n`;
             msg += `--------------------------------\n`;
             msg += `_App hecha por VIBRAS POSITIVAS_`;
 
             window.location.href = `https://wa.me/573014024397?text=${encodeURIComponent(msg)}`;
-        });
+        }, () => { alert("Por favor activa el GPS."); });
     }
 </script>
 </body>
